yamls/python.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-service
spec:
  selector:
    app: python-app
  ports:
    - port: 80
      targetPort: 5002
