yamls/redis.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  clusterIP: None
  selector:
    app: redis-app
  ports:
    - port: 6379
