yamls/python.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/v1/info
spec:
  ingressClassName: nginx
  rules:
    - host: python.161.35.220.22.nip.io
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: python-service
                port:
                  number: 5002
